--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container">
     <div class="col-md-6">
         <div class="PuppyInfoPhoto">
-    <img src="Resources/PuppyInfo.jpg" class="image-responsive" alt="Responsive Image">
+    <img src="http://i.imgur.com/usdjIaS.jpg" class="image-responsive" alt="Responsive Image">
                 </div>
                 </div>
                         <div class="puppyinfoheader">
