--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <ul class="nav navbar-nav">
         <li class="active"><a href="http://stephensmithcreative.github.io/puppiesforever">HOME</a></li>
         <li><a href="http://stephensmithcreative.github.io/puppiesforever-about">ABOUT</a></li>
-        <li><a href="#puppiesportion">OUR PUPPIES</a></li>
+        <li><a href="http://stephensmithcreative.github.io/puppiesforever-ourpuppies">OUR PUPPIES</a></li>
         <li><a href="#contact">CONTACT</a></li>
     </ul>
 </div>
@@ -103,7 +103,7 @@
 <div class="row">
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <img src="Resources/Puppy-4.jpg" width=100% height=100%>
+            <img src="http://i.imgur.com/k81vnYx.jpg" width=100% height=100%>
             <div class="caption">
             <h3>Fluffy</h3>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.    </p>
@@ -113,7 +113,7 @@
     </div>
         <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <img src="Resources/Puppies-5.jpg" width=100% height=100%>
+            <img src="http://i.imgur.com/ODOqfi9.jpg" width=100% height=100%>
             <div class="caption">
             <h3>Alfred</h3>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.    </p>
@@ -123,7 +123,7 @@
     </div>
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <img src="Resources/Puppy-6.jpg" width=100% height=100%>
+            <img src="http://i.imgur.com/TgrtyDu.jpg" width=100% height=100%>
             <div class="caption">
             <h3>Robert</h3>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.    </p>
@@ -135,7 +135,7 @@
 <div class="row">
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <img src="Resources/Puppy-7.jpg" width=100% height=100%>
+            <img src="http://i.imgur.com/nU5rpAd.jpg" width=100% height=100%>
             <div class="caption">
             <h3>Julio</h3>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.    </p>
@@ -145,7 +145,7 @@
     </div>
         <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <img src="Resources/Puppy-8.jpg" width=100% height=100%>
+            <img src="http://i.imgur.com/ySDVaum.jpg" width=100% height=100%>
             <div class="caption">
             <h3>Martino</h3>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.    </p>
@@ -155,7 +155,7 @@
     </div>
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <img src="Resources/Puppy-9.jpg" width=100% height=100%>
+            <img src="http://i.imgur.com/SQL2RZc.jpg" width=100% height=100%>
             <div class="caption">
             <h3>Band Aid</h3>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.    </p>
