--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                                     <h3>Jack</h3>
             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.    </p>
             <p><a href="#" class="btn btn-primary" role="button">Adopt</a> 
-                <a href="#puppiesportion" class="btn btn-default" role="button">See More</a></p>
-            </div>
+               <span id="ScrollDown"> <a href="#puppiesportion" class="btn btn-default" role="button">See More</a>
+            </span></p>
                                     </div>
         </div>
         </div>
@@ -214,7 +214,7 @@
     
 <script type="text/javascript">
     $(document).ready(function() {
-    $('.btn-default').localScroll({duration:800});
+    $('#ScrollDown').localScroll({duration:800});
     });
     </script>
 
