--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     </div>
 <div id="navbar" class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
-        <li class="active"><a href="http://stephensmithcreative.github.io/puppiesforever">HOME</a></li>
+        <li><a href="http://stephensmithcreative.github.io/puppiesforever">HOME</a></li>
         <li><a href="http://stephensmithcreative.github.io/puppiesforever-about">ABOUT</a></li>
-        <li><a href="http://stephensmithcreative.github.io/puppiesforever-ourpuppies">OUR PUPPIES</a></li>
+        <li class="active"><a href="http://stephensmithcreative.github.io/puppiesforever-ourpuppies">OUR PUPPIES</a></li>
         <li><a href="http://stephensmithcreative.github.io/puppiesforever-contact">CONTACT</a></li>
     </ul>
 </div>
